<resources>
    <string name="app_name">RutasMágicas</string>
    <string name="login_activity_label">Inicio de sesión</string>

    <string name="default_web_client_id">575534151090-ub47a85o7kgtbvqfne85d02s857786am.apps.googleusercontent.com</string>


    <string name="navigation_drawer_open">Abrir el menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar el menú de navegación</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Encabezado de navegación</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_mi_perfil">Mi Perfil</string>
    <string name="menu_logout">Cerrar sesión</string>

    <string name="menu_estados">Estados</string>

    <!-- RegistroFragment -->
    <string name="success_registration">Registro exitoso.</string>


    <string name="error_email_already_in_use">El correo electrónico ya está en uso</string>


    <!-- LoginFragment -->
    <string name="msg_login_success">¡Inicio de sesión exitoso!</string>
    <string name="msg_login_failed">La autenticación ha fallado. Por favor, intenta nuevamente.</string>
    <string name="msg_login_empty_email">Por favor, introduce tu correo electrónico.</string>
    <string name="msg_login_invalid_email">Formato de correo electrónico no válido.</string>
    <string name="msg_login_empty_password">Por favor, introduce tu contraseña.</string>
    <string name="msg_login_short_password">La contraseña debe tener al menos 6 caracteres.</string>
    <string name="btn_ok">Aceptar</string>
    <string name="txt_view_login_title">¡Hola! Comienza a explorar Pueblos Mágicos.</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="txt_no_account">¿No tienes una cuenta?</string>
    <string name="txt_sign_in">Registrarse</string>
    <string name="txt_forgot_password">¿Olvidaste tu contraseña?</string>

    <string name="dialog_reset_password_title">Recuperar Contraseña</string>
    <string name="dialog_reset_password_message">Ingresa tu correo electrónico para recibir un enlace de recuperación de contraseña.</string>
    <string name="input_hint_email">Correo electrónico</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="msg_reset_email_sent">Correo de recuperación enviado.</string>
    <string name="msg_reset_email_error">Error al enviar el correo de recuperación.</string>
    <string name="snackbar_exit_prompt">Presiona de nuevo para salir</string>


    <!-- Strings for registration -->
    <string name="txt_view_registro_title">Registro</string>
    <string name="txt_nombre_usuario">Nombre de Usuario</string>
    <string name="txt_correo">Correo Electrónico</string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="txt_confirmar_contraseña">Confirmar Contraseña</string>
    <string name="txt_leido_y_acepto">He leído y acepto los</string>
    <string name="txt_terminos">términos y condiciones</string>
    <string name="txt_y">y</string>
    <string name="txt_politica_privacidad">Política de Privacidad</string>
    <string name="btn_registro">Registrarse</string>

    <!-- Error messages -->
    <string name="error_empty_email">El correo electrónico no puede estar vacío.</string>
    <string name="error_invalid_email">El correo electrónico no es válido.</string>
    <string name="error_empty_password">La contraseña no puede estar vacía.</string>
    <string name="error_short_password">La contraseña debe tener al menos 8 caracteres.</string>
    <string name="error_long_password">La contraseña no puede tener más de 20 caracteres.</string>
    <string name="error_no_case_variation">La contraseña debe contener al menos una letra mayúscula y una minúscula.</string>
    <string name="error_no_number">La contraseña debe contener al menos un número.</string>
    <string name="error_no_special_characters">La contraseña debe contener al menos un carácter especial.</string>
    <string name="error_password_contains_email">La contraseña no puede contener el nombre de usuario.</string>
    <string name="error_password_mismatch">Las contraseñas no coinciden.</string>
    <string name="error_terms_not_accepted">Debes aceptar los términos y condiciones para continuar.</string>
    <string name="error_registration_failed">El registro falló. Inténtalo de nuevo.</string>

    <string name="error_empty_name">El nombre de usuario no puede estar vacío.</string>
    <string name="error_username_taken">El nombre de usuario ya está en uso.</string>
    <string name="error_email_taken">El correo electrónico ya está registrado.</string>
    <string name="registration_successful">Registro exitoso. Bienvenido.</string>
    <string name="error_email_already_registered">El correo electrónico ya está registrado.</string>

    <string name="thank_you_for_registering">¡Gracias por unirte a nuestra comunidad!</string>
    <string name="text_relleno">Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. Muchas versiones han evolucionado a través de los años, algunas veces por accidente, otras veces a propósito (por ejemplo insertándole humor y cosas por el estilo).</string>


</resources>
